--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <title>Meu Portifolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <header class="header-cor">
-     
-    </header>
-    <img class="imagem-centro" src="/minha_foto.jpeg" alt="Foto de Washington para o Portifolio">
-    <h1 class="nome-centro">Washington Gama</h1>
 </head>
 
-<body class="body-cor">
+
+<body>
+        <div class="div-box"></div>
+        <img class="logo-header" src="./logo.png">
+
+    <br>
+    <img class="imagem-centro" src="/minha_foto.jpeg" alt="Foto de Washington para o Portifolio">
+    <h1 class="nome-centro">Washington Gama</h1>
     
 
     <div class="redessociais ">
